# cn-financial-report-inspector

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/batch_reports/: user_offer_01_inputs.json  user_offer_01_summary.json  user_offer_01_summary.md
data/datasets/user_offer_01/: checks_manifest.jsonl  dataset_card.md  (+4 more)
data/manifests/: ST福成_福成股份_2025年年度报告(更正后）_281d4b63.json
scripts/: build_dataset_manifest.py  export_for_web_gpt.py  generate_growth_rate_mutations.py  parse_pdfs.py  run_growth_rate_checks.py  run_quarterly_sum_checks.py  summarize_batch_results.py
src/fri_checks/: __init__.py  formula_registry.py  growth_rate_checker.py  number_parser.py  quarterly_mapper.py  quarterly_runner.py  quarterly_sum_checker.py  runner.py  schema.py  semantic_mapper.py
src/fri_dataset/: __init__.py  manifest_builder.py  schema.py  stats.py  validation.py
src/fri_mutation/: __init__.py  growth_rate_mutator.py  runner.py  schema.py
src/fri_pdf/: __init__.py  markdown_exporter.py  parser.py  pdf_type.py  schema.py  table_classifier.py  table_extractor.py  utils.py
tests/: test_dataset_manifest.py  test_exporters.py  test_formula_registry.py  test_generate_growth_rate_mutations.py  test_growth_rate_checker.py  test_growth_rate_mutator.py  test_line_endings.py  test_number_parser.py  test_parse_pdfs_script.py  test_parser.py  test_pdf_type.py  test_quarterly_mapper.py  test_quarterly_sum_checker.py  test_run_growth_rate_checks.py  test_run_quarterly_sum_checks.py  test_semantic_mapper.py  test_summarize_batch_results.py  test_table_extractor.py  test_utils.py
(+569 files in other folders)
