[project]
name = "cn-financial-report-inspector"
version = "0.1.0"
description = "MVP PDF processing module for Chinese listed-company financial reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.23",
  "pandas>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
